# budget-wise

./: .commitlintrc.yml  .env.example  .gitignore  .pylintrc  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  package.json
.github/workflows/: commitlint.yml  frontend-build.yml  pylint.yml  release.yml
backend/: .dockerignore  Dockerfile  Makefile  README.md  __init__.py  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py  main.py  version.py
backend/app/api/: __init__.py  deps.py
backend/app/api/endpoints/: __init__.py  transactions.py
backend/app/core/: __init__.py  config.py
backend/app/crud/: __init__.py  transaction.py
backend/app/db/: __init__.py  init_db.py  session.py
backend/app/models/: __init__.py  account.py  category.py  transaction.py  user.py
frontend/: .dockerignore  .eslintrc.json  Dockerfile  README.md  next-env.d.ts  next.config.js  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
frontend/components/: FileUpload.tsx  Layout.tsx
frontend/pages/: index.tsx
frontend/pages/api/: version.ts
frontend/services/: api.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/version/: route.ts
frontend/src/components/: FileUpload.tsx  file-upload.tsx  footer.tsx  header.tsx
frontend/styles/: Home.module.css  globals.css
scripts/: bump_version.py
